unpackaged/main/default/objects/OrderItem/fields/Additional_Disc__c.field-meta.xml
<CustomField>
    <fullName>Additional_Disc__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Disc. (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>