unpackaged/main/default/objects/OrderItem/fields/Additional_Disc_Amt__c.field-meta.xml
<CustomField>
    <fullName>Additional_Disc_Amt__c</fullName>
    <formula>SBQQ__QuoteLine__r.SBQQ__AdditionalDiscountAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Disc. (Amt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>