unpackaged/main/default/objects/OrderItem/fields/NetSuite_Id__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Id__c</fullName>
    <label>NetSuite Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>