unpackaged/main/default/objects/OrderItem/fields/Plant_Product_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Plant_Product_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Product Transaction</label>
    <referenceTo>Plant_Product_Transaction__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>