unpackaged/main/default/objects/OrderItem/fields/Related_PPT_s_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Related_PPT_s_Net_Total__c</fullName>
    <description>PPT Net Total on Order Product</description>
    <label>Related PPT&#39;s Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>