unpackaged/main/default/objects/OrderItem/fields/Related_PPT_s_Net_Total_Final__c.field-meta.xml
<CustomField>
    <fullName>Related_PPT_s_Net_Total_Final__c</fullName>
    <label>Related PPT&#39;s Net Total Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>